--- a/packages/talker_dio_logger/example/pubspec.yaml
+++ b/packages/talker_dio_logger/example/pubspec.yaml
@@ -10,8 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^5.0.0
-  talker_dio_logger: ^2.3.1
-  talker_flutter: ^3.5.3    
+  talker_dio_logger:
+    path: ../../talker_dio_logger
+  talker_flutter:
+    path: ../../talker_flutter
 
 dev_dependencies:
   flutter_test:
