--- a/packages/talker_dio_logger/pubspec.yaml
+++ b/packages/talker_dio_logger/pubspec.yaml
@@ -1,6 +1,7 @@
 name: talker_dio_logger
 description: Lightweight and customizable dio http client logger on talker base
 version: 2.3.1
+publish_to: none
 
 homepage: https://github.com/Frezyx/talker
 repository: https://github.com/Frezyx/talker
@@ -18,7 +19,9 @@ environment:
 
 dependencies:
   dio: ^5.2.0
-  talker: ^3.1.4
+  talker:
+    path:
+      ../talker
 
 dev_dependencies:
   lints: ^2.0.0
