--- a/packages/talker/pubspec.yaml
+++ b/packages/talker/pubspec.yaml
@@ -18,8 +18,9 @@ environment:
 
 dependencies:
   talker_logger:
-    path:
-      ../talker_logger
+    git:
+      url: https://github.com/zvikarp/talker.git
+      path: packages/talker_logger/
 
 dev_dependencies:
   lints: ^2.0.0
