--- a/packages/talker/pubspec_overrides.yaml
+++ b/packages/talker/pubspec_overrides.yaml
@@ -1,4 +1,5 @@
 dependency_overrides:
   talker_logger:
-    path:
-      ../talker_logger
+    git:
+      url: https://github.com/zvikarp/talker.git
+      path: packages/talker_logger/
