--- a/packages/talker_flutter/pubspec.yaml
+++ b/packages/talker_flutter/pubspec.yaml
@@ -21,8 +21,9 @@ dependencies:
     sdk: flutter
 
   talker:
-    path:
-      ../talker
+    git:
+      url: https://github.com/zvikarp/talker.git
+      path: packages/talker/
   group_button: ^5.3.3
   path_provider: ^2.1.1
   share_plus: ^7.2.1
