--- a/packages/talker_flutter/pubspec_overrides.yaml
+++ b/packages/talker_flutter/pubspec_overrides.yaml
@@ -1,4 +1,5 @@
 dependency_overrides:
   talker:
-    path:
-      ../talker
+    git:
+      url: https://github.com/zvikarp/talker.git
+      path: packages/talker/
