--- a/packages/talker_http_logger/pubspec.yaml
+++ b/packages/talker_http_logger/pubspec.yaml
@@ -10,8 +10,9 @@ environment:
 dependencies:
   http_interceptor: ^2.0.0-beta.7
   talker:
-    path:
-      ../talker
+    git:
+      url: https://github.com/zvikarp/talker.git
+      path: packages/talker/
 
 dev_dependencies:
   lints: ^2.0.0
