--- a/packages/talker_dio_logger/pubspec.yaml
+++ b/packages/talker_dio_logger/pubspec.yaml
@@ -20,8 +20,9 @@ environment:
 dependencies:
   dio: ^5.2.0
   talker:
-    path:
-      ../talker
+    git:
+      url: https://github.com/zvikarp/talker.git
+      path: packages/talker/
 
 dev_dependencies:
   lints: ^2.0.0
