--- a/packages/talker_dio_logger/pubspec.yaml
+++ b/packages/talker_dio_logger/pubspec.yaml
@@ -18,7 +18,9 @@ environment:
 
 dependencies:
   dio: ^5.4.0
-  talker: ^4.0.2
+  talker:
+    path:
+      ../talker
 
 dev_dependencies:
   lints: ^2.0.0
