--- a/packages/talker_bloc_logger/pubspec.yaml
+++ b/packages/talker_bloc_logger/pubspec.yaml
@@ -4,6 +4,7 @@ version: 4.0.2
 homepage: https://github.com/Frezyx/talker
 repository: https://github.com/Frezyx/talker
 issue_tracker: https://github.com/Frezyx/talker/issues
+publish_to: none
 
 topics:
   - bloc
@@ -16,7 +17,9 @@ environment:
   sdk: '>=2.15.0 <4.0.0'
 
 dependencies:
-  talker: ^4.0.2
+  talker:
+    path:
+      ../talker
   bloc: ^8.1.1
   meta: ^1.8.0
 
