--- a/packages/talker_flutter/pubspec.yaml
+++ b/packages/talker_flutter/pubspec.yaml
@@ -20,7 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  talker: ^4.0.2
+  talker:
+    path:
+      ../talker
   group_button: ^5.3.3
   path_provider: ^2.1.1
   share_plus: ^7.2.1
