--- a/packages/talker_http_logger/pubspec.yaml
+++ b/packages/talker_http_logger/pubspec.yaml
@@ -2,13 +2,16 @@ name: talker_http_logger
 description: Lightweight and customizable http client logger on talker base
 version: 0.1.0-dev.2
 homepage: https://github.com/Frezyx/talker
+publish_to: none
 
 environment:
   sdk: ^3.0.3
 
 dependencies:
   http_interceptor: ^2.0.0-beta.7
-  talker: ^4.0.2
+  talker:
+    path:
+      ../talker
 
 dev_dependencies:
   lints: ^2.0.0
