--- a/packages/talker_http_logger/pubspec.yaml
+++ b/packages/talker_http_logger/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/Frezyx/talker
 publish_to: none
 
 environment:
-  sdk: ^3.0.3
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   http_interceptor: ^2.0.0-beta.7
